--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /Life2$MakeMove.class
 /Life2$RunGame.class
 /windowChooser.class
+/windowChooser$1.class
+/windowChooser$2.class
+/windowChooser$3.class
